syntax="proto3";

package greet;

option java_package="com.github.jishnuc.proto";
option java_multiple_files= true;

message Greeting{
  string first_name=1;
  string last_name=2;
}

message GreetingRequest{
  Greeting greeting=1;
}

message GreetingResponse{
  string result=1;
}

service GreetingService{
  //Unary api
  rpc Greet(GreetingRequest) returns (GreetingResponse){};
}